kubernetes/roadweatherdash.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: roadweatherdash
spec:
  replicas: 1
  selector:
    matchLabels:
      app: roadweatherdash
  template:
    metadata:
      labels:
        app: roadweatherdash
    spec:
      containers:
      - name: influxdb
        image: mntcr.azurecr.io/kompu_influxdb:v1.0.0
        volumeMounts:
        - name: influxdb
          mountPath: /var/lib/influxdb
        ports:
        - containerPort: 8086
      - name: grafana
        image: mntcr.azurecr.io/kompu_grafana:v1.0.0
        volumeMounts:
        - name: grafana
          mountPath: /var/lib/grafana
        ports:
        - containerPort: 3000
      imagePullSecrets:
      - name: mntiot  
      volumes:
      - name: influxdb
        persistentVolumeClaim:
          claimName: azure-managed-disk-influxdb
      - name: grafana
        persistentVolumeClaim:
          claimName: azure-managed-disk-grafana
---
apiVersion: v1
kind: Service
metadata:
  name: influxdb
spec:  
  ports:
  - port: 8086
    targetPort: 8086
    protocol: TCP
    name: http  
  selector:
    app: roadweatherdash
---
apiVersion: v1
kind: Service
metadata:
  name: roadweatherdash
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: http  
  selector:
    app: roadweatherdash
